# paper-teacher

backend/: .gitignore  pyproject.toml
backend/app/: main.py  paper.py  pdf.py
backend/app/llm/summarize/: model.py  section_prompt.md  system_prompt.md
frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/project.inlang/: project_id
frontend/src/: app.css
frontend/src/lib/components/: FileInput.svelte  Markdown.svelte
frontend/src/lib/stores/: paper.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/summarize/: +page.svelte
