[tool.poetry]
name = "paper-teacher"
version = "0.1.0"
description = ""
authors = ["t-yng <t.yng.greenmonkey@gmail.com>"]
# readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.12"
pymupdf4llm = "^0.0.17"
markdown = "^3.7"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
python-multipart = "^0.0.17"
langchain = "^0.3.7"
langchain-openai = "^0.2.5"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
dev = "poetry run uvicorn app.main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
